<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:viewBindingIgnore="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <HorizontalScrollView
            android:id="@+id/standings_view"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TableLayout
                android:id="@+id/table_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="@drawable/row_divider"
                android:showDividers="middle"
                android:gravity="center"
                android:animateLayoutChanges="true">
                <TableRow>
                    <View
                        android:id="@+id/team_rank"
                        android:layout_width="30dp"
                        android:layout_height="20dp"/>

                    <View
                        android:layout_width="50dp"
                        android:layout_height="20dp"/>

                    <TextView
                        android:text="@string/team"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:text="@string/points"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <TextView
                        android:text="@string/goal_for"
                        android:gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/goal_against"
                        android:gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/goal_diff"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/played"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/win"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/draw"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/lose"
                        android:layout_gravity="center"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loadingIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:trackCornerRadius="20dp" />

        <include
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone"
            layout="@layout/error_layout"/>
    </RelativeLayout>
</ScrollView>