<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="matchDetails"
            type="com.mobile.sportology.models.football.FixtureById" />
    </data>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/weatherInfo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            style="?attr/materialCardViewFilledStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{matchDetails.response.get(0).fixture.referee}"
                    android:drawablePadding="5dp"
                    app:drawableLeftCompat="@drawable/football_whistle_of_referee" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@{matchDetails.response.get(0).fixture.venue.name + ',' + ' ' + matchDetails.response.get(0).fixture.venue.city}"
                    android:drawablePadding="5dp"
                    app:drawableLeftCompat="@drawable/stadium_icon" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <HorizontalScrollView
            android:id="@+id/scrollable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="3dp"
            android:scrollbars="none">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true"
                android:layout_gravity="center"
                app:checkedButton="@id/stats">

                <Button
                    android:id="@+id/stats"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:text="@string/stats"/>

                <Button
                    android:id="@+id/lineups"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:drawableEnd="@drawable/ic_drop_menu"
                    android:layout_height="wrap_content"
                    android:text="@string/lineups"/>

                <Button
                    android:id="@+id/standing"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standing"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </HorizontalScrollView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:elevation="20dp"
            android:background="@color/WhiteSmoke"
            app:defaultNavHost="true"
            app:navGraph="@navigation/match_details_activity_nav_graph" />
    </LinearLayout>
</layout>